# VulkanRetake

./: .gitignore  CMakeLists.txt  README.md  Vulkan.vcxproj  Vulkan.vcxproj.filters  compile.bat
data/configs/: scene_config.json
data/shaders/: 2d.frag  2d.frag.spv  2d.vert  2d.vert.spv  3d.frag  3d.frag.spv  3d.vert  3d.vert.spv  material_pbr.frag  material_pbr.frag.spv  material_pbr.vert  material_pbr.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  texture_pbr.frag  texture_pbr.frag.spv  texture_pbr.vert  texture_pbr.vert.spv
props/: glfw.props  glm.props  nlohmann.props  post_build.props  pre-build.props  stb.props  tol.props  vulkan.props
src/: main.cpp
src/core/: factory.cpp  factory.h  game_object.cpp  game_object.h  model.cpp  model.h
src/engine/: camera.cpp  camera.h  engine.cpp  engine.h  frame_info.h  game_time.h  scene.cpp  scene.h  scene_config_manager.cpp  scene_config_manager.h  scene_loader.cpp  scene_loader.h  scene_manager.cpp  scene_manager.h  window.cpp  window.h
src/input/: movement_controller.cpp  movement_controller.h  shading_mode_controller.cpp  shading_mode_controller.h
src/system/: i_system.cpp  i_system.h  material_pbr_system.cpp  material_pbr_system.h  point_light_system.cpp  point_light_system.h  render_2d_system.cpp  render_2d_system.h  render_3d_system.cpp  render_3d_system.h  texture_pbr_system.cpp  texture_pbr_system.h
src/utility/: material.h  singleton.h  texture.cpp  texture.h  utils.h
src/vulkan/: buffer.cpp  buffer.h  descriptors.cpp  descriptors.h  device.cpp  device.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swap_chain.cpp  swap_chain.h
